-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0, 5.7.1
-
96fd274767ff42b00f9201cb742c8ec5d389861e
printToPDF does not pass on any margins set on the QPageLayout, only the page size seems to be respected, not any custom margins set on the QPageLayout
| For Gerrit Dashboard: QTBUG-56710 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 174775,4 | Apply page margins also for PDF printing (backport from 5.8) | 5.7 | qt/qtwebengine | Status: MERGED | +2 | 0 |