Apply page margins also for PDF printing (backport from 5.8)

This was left out by oversight.

Task-number: QTBUG-56710
Change-Id: Ie23229396eb94b949212324fb50022763935d524
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>